# perfect-notepad

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
data/: pnote.desktop
packaging/: pnotepad.spec
qml/: Main.qml
src/: activation.rs  instance.rs  main.rs  naming.rs  session.rs
