[package]
name = "pnotepad"
version = "0.1.1"
edition = "2021"
description = "A fast, native notepad for KDE with automatic session restore"
license = "GPL-3.0-or-later"

[[bin]]
name = "pnote"
path = "src/main.rs"

[dependencies]
cxx = "1"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }

[build-dependencies]
cxx-qt-build = { version = "0.7", features = ["link_qt_object_files"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
